--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,17 @@ body{
 a {
  text-decoration: none;
 }
+ A:link{
+ color: var(--basic-black);
+ }
   
 img {
  max-width: 100%;
  height: auto;
+}
+
+button{
+ border: 0;
 }
 
 .navigation{
@@ -104,8 +111,82 @@ img {
  border-radius: 3px;
 }
 
+.information p{
+ font-style: normal;
+ font-weight: bold;
+ font-size: 16px;
+ line-height: 24px;
+}
 
+.inf-list {
+ font-style: normal;
+ font-weight: normal;
+ list-style-type: none;
+}
 
+.inf-list:before {
+  color: var(--dark-red); 
+  content: "—";
+  padding-right: 10px;
+  width: 25px;
+  height: 2px;
+} 
+
+.achievement h3{
+ font-style: normal;
+ font-weight: bold;
+ font-size: 16px;
+ line-height: 24px;
+}
+
+.achievement-list p{
+  list-style-type: none;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 45px;
+  line-height: 64px;
+}
+
+.achievement-list h3{
+ font-style: normal;
+ font-weight: normal;
+ font-size: 16px;
+ line-height: 18px;
+}
+.slide{
+ width: 1157px;
+ height: 431px;
+}
+
+.map-adds{
+ width: 319px;
+ height: 308px;
+ background-color: var(--basic-white);
+}
+
+.map-adds h2{
+ font-style: normal;
+ font-weight: bold;
+ font-size: 18px;
+ line-height: 30px;
+}
+.map-adds{
+ font-style: normal;
+ font-weight: normal;
+ font-size: 16px;
+ line-height: 18px;
+}
+
+.map-adds button{
+ width: 219px;
+ height: 50px;
+ background-color: var(--dark-red);
+ color: var(--basic-white);
+ font-style: normal;
+ font-weight: 500;
+ font-size: 16px;
+ line-height: 18px;
+}
 
 
 
