--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,11 @@
 body{
   font-family: "Roboto", sans-serif ;
   background-color: var(--basic-white) ;
-  margin: 0;
+  margin: auto;
   padding: 0;
-  font-size: 16px; 
+  font-size: 16px;
   text-transform: none;
   min-width: 960px;
-  text-align: center; 
   font-weight: normal;
   line-height: 24px;
 }
@@ -23,6 +22,7 @@ body{
 header {
   width: 1440px;
   height: 545px;
+  padding:5px;
   background-color: var(--light-grey);
   color: var(--basic-black) ;
  }
@@ -36,26 +36,33 @@ header {
 }
 
 .main-navigation li{
-  display: inline-block ;
+  display: inline-block;
+}
+
+a{
+   text-decoration: none;
 }
 
 li{
   list-style-type: none
 }
 
-.nav-list a {
- text-decoration: none;
+.nav-list {
  color: var(--basic-black) ;
  font-weight: 500;
  line-height: 30px;
 }
 
-a:hover {
+.nav-list:hover {
   color: var( --dark-red) ;
 }
 
-a:active{
+.nav-list:active{
   color: var( --grey);
+}
+nav{
+  word-spacing: 44px;
+  margin: 76px;
 }
 
 img {
@@ -66,7 +73,9 @@ img {
 button{
  border: 0;
 }
-
+.services-item{
+  display: inline-block;
+}
 .services-item h3{
   text-transform: uppercase;
   align-items: center;
@@ -82,29 +91,45 @@ button{
   font-size: 16px;
   line-height: 24px;
 }
-.services-item a{
- width: 160px;
- height: 50px;
+.a-btn{
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  color: var(--basic-white);
  border-radius: 3px;
+ text-transform: uppercase;
+ text-decoration: none;
+ text-align: center;
+ display: inline-block;
+ padding: 5px 15px;
 }
 
 .btn1{
  background-color: var(--dark-green);
+ width: 160px;
+ height: 50px;
 }
 
 .btn2{
  background-color: var(--dark-red);
+ width: 160px;
+ height: 50px;
 }
 
 .btn3{
-  background-color: var(--dark-yellow);
+ background-color: var(--dark-yellow);
+ width: 160px;
+ height: 50px;
 }
-
+.information h2{
+ font-style: normal;
+ font-weight: 500;
+ font-size: 45px;
+ line-height: 45px;
+ display: flex;
+ align-items: center;
+}
 .information p{
  font-style: normal;
  font-weight: bold;
@@ -124,12 +149,12 @@ button{
 }
 
 .inf-list:before {
-  color: var(--dark-red); 
+  color: var(--dark-red);
   list-style-type: square;
   padding-right: 10px;
   width: 25px;
   height: 2px;
-} 
+}
 
 .achievement h3{
  font-style: normal;
@@ -146,15 +171,11 @@ button{
   line-height: 64px;
 }
 
-.achievement-list h3{
+ h3{
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 18px;
-}
-.slide{
- width: 1157px;
- height: 431px;
 }
 
 .map-adds{
