--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,39 @@ header {
   background-color: var(--light-grey);
  }
 
+.slide h3{
+  align-items: center;
+  font-weight: 500;
+  font-size: 55px;
+  line-height: 55px
+}
+
+.slide p{
+  align-items: center;
+  font-weight: normal;
+}
+
+.slide a{
+  width: 240px;
+  height: 50px;
+  background-color: var(--dark-red);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  align-items: center;
+  text-align: center;
+  color: var(--basic-white)
+}
+
+.slide a:hover{
+  background-color: var(--red-hover);
+  box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+}
+
+.slide a:active {
+  color: rgba(255, 255, 255, .3);
+}
+
  .nav-list{
   text-transform: uppercase;
   line-height: 30px;
@@ -197,6 +230,19 @@ button{
  font-weight: normal;
  line-height: 18px;
  font-size: 16px;
+}
+
+.sponsors{
+  opacity: 0.2;
+  display: inline-block;
+}
+
+.sponsors:hover{
+  opacity: 1;
+}
+
+.sponsors:active{
+  opacity: 0.1;
 }
 
 .map-adds{
