--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,9 @@ header {
   line-height: 18px;
   align-items: center;
   text-align: center;
-  color: var(--basic-white)
+  color: var(--basic-white);
+  padding: 16px 54px;
+  text-transform: uppercase;
 }
 
 .slide a:hover{
@@ -150,6 +152,8 @@ button{
   text-decoration: none;
   text-align: center;
   display: inline-block;
+
+  padding-top: 17px;
 }
 
 
@@ -164,18 +168,18 @@ button{
 .a-btn--green{
   background-color: var(--dark-green);
   width: 160px;
-  height: 50px;
+  height: 33px;
 }
 .a-btn--red{
   background-color: var(--dark-red);
   width: 160px;
-  height: 50px;
+  height: 33px;
 }
 
 .a-btn--yellow{
   background-color: var(--dark-yellow);
   width: 160px;
-  height: 50px;
+  height: 33px;
 }
 
 .a-btn--green:hover{
@@ -369,6 +373,7 @@ button{
   align-items: center;
   text-align: center;
   text-transform: uppercase;
+  padding: 17px 72px 15px 72px;
   margin: 0 80px;
 }
 
