--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,15 @@
 body{
   font-family: "Roboto", sans-serif ;
   background-color: var(--basic-white) ;
-  margin: auto;
-  padding: 0;
+  margin: 0 auto;
   font-size: 16px;
   text-transform: none;
-  min-width: 960px;
+  width: 1440px;
   font-weight: normal;
   line-height: 24px;
   font-style: normal;
+  display: grid;
+  grid-template-rows: 114px 1fr 565px;
 }
 
 .visually-hidden {
@@ -40,8 +41,24 @@ header {
   height: 114px;
   padding:5px;
   background-color: var(--light-grey);
-  color: var(--basic-black) ;
+  color: var(--basic-black);
  }
+
+ .main-navigation{
+  display: grid;
+  grid-template-columns: 1fr 1fr 438px 1fr 1fr;
+}
+
+.main-navigation ul{
+  display: grid;
+  grid-column: 3/-3;
+}
+
+.basket{
+  grid-column: 5/-1 ;
+  grid-row: 1;
+}
+
  .slides{
   background-color: var(--light-grey);
  }
@@ -81,16 +98,6 @@ header {
   color: rgba(255, 255, 255, .3);
 }
 
- .nav-list{
-  text-transform: uppercase;
-  line-height: 30px;
-  font-weight: 500;
-}
-
-.main-navigation li{
-  display: inline-block;
-}
-
 a{
    text-decoration: none;
 }
@@ -103,6 +110,7 @@ li{
  color: var(--basic-black) ;
  font-weight: 500;
  line-height: 30px;
+ text-transform: uppercase;
 }
 
 .nav-list:hover {
@@ -114,11 +122,6 @@ li{
   mix-blend-mode: normal;
   opacity: 0.3;
 }
-
-/*nav{
-  word-spacing: 44px;
-  margin: 76px;
-}*/
 
 img {
  max-width: 100%;
