--- a/css/style.css
+++ b/css/style.css
@@ -86,16 +86,28 @@ header{
   background-color: var(--light-grey);
  }
 
+ .slide{
+   margin:0;
+ }
+
+ .slides ul{
+   margin: 0 140px;
+ }
+
 .slide h3{
   align-items: center;
   font-weight: 500;
   font-size: 55px;
-  line-height: 55px
+  line-height: 55px;
+  margin: 0;
 }
 
 .slide p{
   align-items: center;
   font-weight: normal;
+}
+
+.slide img{
 }
 
 .slide a{
@@ -122,7 +134,7 @@ header{
 }
 
 a{
-   text-decoration: none;
+  text-decoration: none;
 }
 
 li{
@@ -283,7 +295,6 @@ button{
 
 .sponsors{
   opacity: 0.2;
-  display: inline-block;
 }
 
 .sponsors:hover{
@@ -294,24 +305,42 @@ button{
   opacity: 0.1;
 }
 
-map{
- min-width: 1440px;
+.footer-map {
+ display: grid;
 }
+
+.map {
+  grid-column: 1/-1;
+  grid-row: 1/-1;
 }
-.map-adds{
- width: 319px;
- height: 308px;
- background-color: var(--basic-white);
+
+.map-adds {
+  justify-self: start;
+  align-self: center;
+  margin-left: 140px;
+  grid-column: 1/-1;
+  grid-row: 1/-1;
+  width: 320px;
+  height: 310px;
+  background-color: var(--basic-white);
+  font-weight: normal;
+  line-height: 18px;
+}
+
+.map-adds div{
+  margin: 47px 50px;
 }
 
 .map-adds h2{
  font-weight: bold;
  font-size: 18px;
  line-height: 30px;
+ margin-top: 2px;
 }
-.map-adds{
- font-weight: normal;
- line-height: 18px;
+
+.map-adds p{
+  margin: 0;
+  margin-top: 25px;
 }
 
 .map-adds button{
@@ -322,10 +351,24 @@ map{
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
+ margin-top: 33px;
+ text-transform: uppercase;
+ padding: 0;
 }
 
 .map-adds button:hover{
   background-color: var(--red-hover);
+}
+
+.network{
+  display: grid;
+  margin: 68px 140px;
+  grid-template-columns: 260px 1fr;
+}
+
+.network-str{
+  grid-column: 2/3;
+  margin-left: 140px;
 }
 
 .str{
@@ -339,8 +382,11 @@ map{
  line-height: 22px;
 }
 
-.s-network li{
-  display: inline-block;
+.s-network{
+display: grid;
+grid-template-columns: repeat(3,1fr);
+ margin: 0;
+ padding: 0;
 }
 
 .s-network-list{
