--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,7 @@ header{
 }
 
 .basket{
-  /* grid-column: 3/4;
-  grid-row: 1;
-  text-align: center; */
+ margin-bottom: 16px;
 }
 
 .header-logo{
@@ -99,31 +97,46 @@ header{
   font-weight: 500;
   font-size: 55px;
   line-height: 55px;
-  margin: 0;
+  margin-top: 78px;
+  grid-row: 1/2;
+  grid-column: 1/2;
 }
 
 .slide p{
   align-items: center;
   font-weight: normal;
+  grid-row: 2/3;
+  grid-column: 1/2;
 }
 
-.slide img{
+.slide{
+  display: grid;
+  grid-template-rows: 205px 65px 160px ;
+  grid-template-columns: 1fr 1fr;
 }
 
 .slide a{
   width: 240px;
-  height: 50px;
+  height: 33px;
   background-color: var(--dark-red);
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
-  align-items: center;
   text-align: center;
   color: var(--basic-white);
-  padding: 16px 54px;
+  padding-top: 17px;
   text-transform: uppercase;
+  grid-row: 3/4;
+  grid-column: 1/2;
+  margin-top: 30px;
 }
 
+.slide img{
+  grid-row: 1/-1;
+  grid-column: 1/-1;
+  justify-self: end;
+  order: -1;
+}
 .slide a:hover{
   background-color: var(--red-hover);
   box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
@@ -146,7 +159,6 @@ li{
  font-weight: 500;
  line-height: 30px;
  text-transform: uppercase;
- /* margin-top: 74px; */
 }
 
 .nav-list:hover {
@@ -168,6 +180,9 @@ button{
  border: 0;
 }
 
+.services{
+  margin: 80px 0;
+}
 .services-item h3{
   text-transform: uppercase;
   align-items: center;
@@ -246,8 +261,15 @@ button{
 .info-block {
   display: grid;
   grid-template-columns: 1fr 360px;
+  margin-top: 40px;
+  margin-bottom: 75px;
 }
-
+.retangle{
+  height: 2px;
+  width: 1158px;
+  margin: 0 auto;
+  background-color: var(--light-grey);
+}
 
 .information h2{
  font-weight: 500;
@@ -287,10 +309,15 @@ button{
  font-size: 16px;
 }
 
+.sponsor-margin{
+  margin: 45px auto;
+}
+
 .sponsors-list{
  display: grid;
  grid-template-columns: repeat(4,1fr);
  padding: 0;
+ align-items: center;
 }
 
 .sponsors{
@@ -307,6 +334,10 @@ button{
 
 .footer-map {
  display: grid;
+}
+
+footer{
+  margin-top: 80px;
 }
 
 .map {
@@ -423,13 +454,14 @@ grid-template-columns: repeat(3,1fr);
 .templates-shop{
   background-color: var(--light-grey);
   width: 1440;
+  height: 250px;
 }
 .templates-shop h1{
   font-weight: 500;
   font-size: 55px;
   line-height: 55px;
-  align-items: center;
-  margin-top: 100px;
+  text-align: center;
+  margin:0;
 
 }
 
